# comex-fetcher

./: .gitignore  LICENSE  README.md  compress-files.py  compress.py  fetch-comex.py  fetch.py  pyproject.toml  requirements.txt  setup.py
comex_fetcher/: fetcher.py  storage.py  tables.py
docs/: 25 Atualização Metodológica.md  26 Tutoriais - Comex Stat.md  27 Problemas com informação de VIA DE TRANSPORTE.md  30 Reprocessamento de dados.md  31 Brasil como país de origem.md  32 Reprocessamento de dados.md  33 Ajuste metodológico em importação por UF.md  34 Problema no link para a Base de Dados.md  37 Revisão metodológica dos dados.md
secex_comex/: fetcher.py
