[project]
name = "comex-fetcher"
version = "0.0.1"
description = "Fetcher of raw data from the SECEX website."
authors = [
    {name="Daniel Komesu", email="danielkomesu@gmail.com"},
]

requires-python = ">=3.10"

dependencies = [
    "httpx",
    "tqdm",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
