[project]
name = "comex-fetcher"
version = "0.1.0"
description = "Fetcher of raw data from the SECEX website."
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = []
authors = [
    {name="Daniel Komesu", email="danielkomesu@gmail.com"},
]
classifiers = [

]

dependencies = [
    "httpx",
    "tqdm",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
